second styling changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id = "gameInfo">
         <p>Guess the random letter that the computer has selected. Use the keys on the keyboard to guess the letter that the computer has chosen.</p>
         <p>Guessed letters: <span id="guesses"></span></p>
-        <button id = "resetGame">Reset Game</button>
+        <button id = "resetGame" onclick="newGame()">Reset Game</button>
     </div>
 
     
